# vflow-umkm

./: README.md  SETUP.md  TESTING.md  package-lock.json  package.json  server.js
db/: schema.sql
docs/: Database.md  architecture.md  workflow.md
docs/provision-pattern/000-provision-server/: Cargo.toml  README.md
docs/provision-pattern/000-provision-server/src/: main.rs
docs/provision-pattern/001-multi-tenant/: workflow.yaml
docs/provision-pattern/002-hot-reload/: workflow.yaml
docs/provision-pattern/003-workflow-versioning/: workflow-v1.yaml  workflow-v2.yaml
docs/scripts/: vflow-admin.ps1  vflow-admin.sh
docs/vflow-authoring-guide/: 00-overview.md  01-schema.md  02-activities.md  03-connectors.md  04-triggers.md  05-expressions.md  06-pack-tier.md  07-examples.md  08-iac-resources.md  09-quick-transform.md  10-vcel-transform.md  11-vrule-vdicl.md  12-compute-activity.md  13-audit-log.md  docs-manifest.json
docs/vrule-authoring-guide/: 00-index.md  01-authoring-style.md  02-rule-pack-yaml.md  03-schema-and-fields.md  04-expressions-and-operators.md  05-literals-and-values.md  06-functions.md  07-actions-and-outputs.md  08-hit-policies.md  09-dmn-unary-tests.md  10-validation-and-runtime.md
public/: index.html
rules/: aturan_harga_umkm_v1.vdicl
schemas/: harga_fact_v1.yaml
scripts/: vflow-admin.bat  vflow-admin.js
test/: smoke-test.sh
workflows/: 01-buka-keranjang.yaml  02-validasi-stok.yaml  03-kalkulasi-tagihan.yaml  04-konfirmasi-pembayaran.yaml  05-penyelesaian-pesanan.yaml  06-audit-log.yaml
(+138 files in other folders)
